--- a/src/app/sections/hero/hero.component.css
+++ b/src/app/sections/hero/hero.component.css
@@ -1,15 +1,9 @@
 .hero-section {
-    display: flex;
-    width: 100%;
     height: 100vh;
     background: url("../../../assets/images/hero-bg.jpg") black 50% / cover
         no-repeat;
     background-position: top;
-    padding: 0px 110px;
     padding-top: 100px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
     gap: 10px;
 }
 
@@ -69,8 +63,7 @@
 
 @media (max-width: 450px) {
     .hero-section {
-        padding: 0px 50px;
-        padding-top: 100px;
+        padding: 0px 24px;
         background: url("../../../assets/images/home-section-responsive.png")
             black 50% / cover no-repeat;
         background-position: center;
@@ -82,6 +75,7 @@
 
     .hero-text h1 {
         font-size: 3.2rem;
+        padding: 0px 40px 0px 0px;
     }
 
     .hero-text p {
