--- a/src/styles.css
+++ b/src/styles.css
@@ -109,3 +109,12 @@ a {
     line-height: 125%; /* 20px */
     letter-spacing: -0.8px;
 }
+
+.section-wrapper {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0px 110px;
+}
